load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "trait_data_integration",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    proc_macro_deps = [],
    tags = [
        "integration",
        "trait",
        "trait_data_integration",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Internal crates
        # External crates
        "//thirdparty/crates:cgp",
    ],
)

rust_doc(
    name = "doc",
    crate = ":trait_data_integration",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":trait_data_integration",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
