[package]
name = "trait_data_integration"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[lints]
workspace = true


[dependencies]
# Internal crates
error_data_integration = { workspace = true }

# External crates
cgp = {workspace = true}
